samples/_failures_safe/1761165826_bbc255_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a0c23cfe.c: In function ‘event_to_string’:
./samples/SAFE/__tmp_a0c23cfe.c:180:36: error: missing terminating " character
  180 |         case EVENT_SUCCESS: return "SU
      |                                    ^~~
./samples/SAFE/__tmp_a0c23cfe.c:180:9: error: expected expression at end of input
  180 |         case EVENT_SUCCESS: return "SU
      |         ^~~~
./samples/SAFE/__tmp_a0c23cfe.c:180:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a0c23cfe.c:180:9: error: expected declaration or statement at end of input
